# buffa

./: CHANGELOG.md  Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/src/: context.rs  impl_message.rs  impl_text.rs  lib.rs  message.rs  oneof.rs  view.rs
buffa-codegen/src/tests/: extern_field_paths.rs  mod.rs
buffa-codegen/tests/fixtures/extern_field_paths/brand/: Cargo.toml
buffa-codegen/tests/fixtures/extern_field_paths/brand/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_a/: Cargo.toml  build.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_a/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_b/: Cargo.toml  build.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_b/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_c/: Cargo.toml  build.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_c/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_d/: Cargo.toml  build.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_d/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_oneof/: Cargo.toml  build.rs
buffa-codegen/tests/fixtures/extern_field_paths/corner_oneof/src/: lib.rs
buffa-codegen/tests/fixtures/extern_field_paths/proto/: example.proto  example_oneof.proto
buffa/src/: json_helpers.rs
buffa/src/json_helpers/: tests.rs
protoc-gen-buffa/src/: main.rs
